fix(board): right shifted the clock in board view

--- a/next-tavla/src/Shared/components/Header/styles.module.css
+++ b/next-tavla/src/Shared/components/Header/styles.module.css
@@ -6,4 +6,18 @@
 .tagText {
     font-size: 0.5em;
     color: var(--main-text-color);
+    width: fit-content;
+}
+.logoWrapper {
+    display: block;
+    width: 50%;
+}
+.headerWrapper {
+    display: flex;
+    flex-direction: row;
+}
+.clockWrapper {
+    width: 50%;
+    display: inline-block;
+    text-align: right;
 }
